Fri Dec  3 11:49:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(parse_url): Fix compilation error;
	(Initial, got_href, got_redirect): Try to get the local filename
	for a server's robots.txt file and pass it along to the newly
	generated server.
	* htdig/Server.cc(Server): Retrieve the robots.txt file from the
	filesystem when possible; fix compilation error.
	* htdig/Server.h(Server): Add local_robots_file parameter to Server().
	* htlib/HtWordType.h, htlib/HtWordType.cc: fix compilation errors.
	* htdoc/ChangeLog: Update to latest version.

Fri Dec  3 10:52:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(parse, do_tag): Add handling of <img alt=...> text,
	fix parsing of words in meta tags, disable indexing of meta tags
	when "noindex" state in effect, fix calculations of word positions
	to more accurately reflect relative positions.
	* htlib/HtWordType.h, htlib/HtWordType.cc: Add HtWordToken() function,
	to replace strtok() in HTML parser.
	* htdoc/RELEASE.html: Update with latest fixes.

Fri Dec  3 09:02:55 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration(Add): handle strings in single quotes, as in
	parm='value'.

Thu Dec  2 16:14:28 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Add Tom Metro's suggested revisions for pdf_parser
	and external_parsers.

Thu Dec  2 15:15:03 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/mailing.html: Updated to version from htdig.org web site.
	* htcommon/defaults.cc: Add missing no_page_number_text and
	page_number_text attribute definitions.
	* htdoc/attrs.html(modification_time_is_now): Make the description
	a bit clearer as to how it may cut down on reindexing.

Thu Dec  2 13:46:11 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(parse_url), htdig/Server.cc(Server),
	htcommon/defaults.cc, htdoc/attrs.html, htdoc/cf_byname.html,